[package]
name = "pyconcrete"
version = "0.1.0"
edition = "2021"
#authors = ["D. Ligier", "J.B. Orfila", "A. Péré", "S. Tap", "Zama team"]
#license = "BSD-3-Clause-Clear"
#description = "Concrete is a fully homomorphic encryption (FHE) library that implements Zama's variant of TFHE."
#homepage = "https://crates.io/crates/concrete"
#documentation = "https://docs.zama.ai/concrete/lib"
#repository = "https://github.com/zama-ai/concrete"
#readme = "README.md"
#keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]

[build-dependencies]
cmake = { version = "0.1", optional = true}

[lib]
name = "pyconcrete"
crate-type = ["cdylib"]

[dependencies]
concrete = "^0.1.11"
concrete-core = "=0.1.10"
itertools = "0.9.0"
pyo3 = { version = "0.15.1", features = ["extension-module"] }
